--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="container">
         <div class="content-part">
             <div>
-                <img src="/images/drawers.jpg" alt="" class="image" width="200px" height="200px">
+                <img src="drawers.jpg" alt="" class="image" width="200px" height="200px">
             </div>
             <div class="main">
                 <b class="heading">Shift the overall look and feel by adding these wonderfool touches to furniture in your home</b>
                 <p class="content">Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I've got some simple tips to help you make any room feel complete.</p>
                 <footer>
-                    <img src="/images/avatar-michelle.jpg" alt="" class="michelle">
+                    <img src="avatar-michelle.jpg" alt="" class="michelle">
                     
                     <div class="share-part">
                         <p class="name"><b>Michelle Appleton</b><br>28 June 2020 
