--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,10 +16,11 @@
     <div class="container">
         <div class="content-part">
             <div>
-                <img src="drawers.jpg" alt="" class="image" width="210px" height="230px">
+                <img src="drawers.jpg" alt="" class="image" width="208" height="240">
             </div>
             <div class="main">
-                <b class="heading">Shift the overall look and feel by adding these wonderfool touches to furniture in your home</b>
+                <p>
+                <b class="heading">Shift the overall look and feel by adding these wonderfool touches to furniture in your home</b></p>
                 <p class="content">Ever been in a room and felt like something was missing? Perhaps it felt slightly bare and uninviting. I've got some simple tips to help you make any room feel complete.</p>
                 <footer>
                     <img src="avatar-michelle.jpg" alt="" class="michelle">
